# stardome

./: .gitignore  Cargo.toml  gen_img.sh  index.html  web.py
.cargo/: config.toml
img/: fetch_img.sh  gen_img.sh  sources.txt  to_cube.py
sputils/: Cargo.toml
sputils/examples/: convert.rs
sputils/src/: coord.rs  lib.rs  time.rs
sputils/src/eph/: mod.rs
src/: 0.frag.glsl  0.vert.glsl  camera.rs  lib.rs  main.rs  mesh.rs  shader.rs  texture.rs
src/gfx/: libs.rs  mesh.rs  mod.rs  texture.rs
src/glsl/: planet.frag.glsl  planet.vert.glsl
src/mesh/: sphere.rs
src/sputils/: coord.rs  mod.rs  time.rs
stardome/: Cargo.toml
stardome/examples/sim/: main.rs
stardome/src/: lib.rs  main.rs
stardome/src/gfx/: camera.rs  drawable.rs  libs.rs  mesh.rs  mod.rs  shader.rs  texture.rs
stardome/src/glsl/: atmosphere.es.frag.glsl  atmosphere.es.vert.glsl  atmosphere.frag.glsl  atmosphere.vert.glsl  box.es.frag.glsl  box.es.vert.glsl  box.frag.glsl  box.vert.glsl  planet.es.frag.glsl  planet.es.vert.glsl  planet.frag.glsl  planet.vert.glsl  screen.frag.glsl  simple.es.frag.glsl  simple.frag.glsl
web/: index.html
