[package]
name        = "stardome"
version     = "0.1.0"
authors     = ["AlexApps99 <alex.apps99@gmail.com>"]
edition     = "2018"

publish     = false
description = "Planet visualization"
repository  = "https://github.com/AlexApps99/stardome"

[dependencies.gl]
version     = "0.14.0"

[dependencies.glam]
version     = "0.11.2"

[dependencies.image]
version     = "0.23.12"
default-features = false
features    = ["png"]

[dependencies.imgui]
version     = "0.5.0"
optional    = true

[dependencies.imgui-opengl-renderer]
version     = "0.9.0"
optional    = true

[dependencies.imgui-sdl2]
version     = "0.12.0"
optional    = true

[dependencies.sdl2]
version     = "0.34.3"

[dependencies.sgp4]
version     = "0.4.0"

[dependencies.sofa-sys]
version     = "2020.7.21-beta.1"

[features]
default     = []
gui         = ["imgui", "imgui-opengl-renderer", "imgui-sdl2"]
