[package]
name        = "sputils"
version     = "0.1.0"
authors     = ["AlexApps99 <alex.apps99@gmail.com>"]
edition     = "2018"

publish     = false
description = "SPace UTILS"
repository  = "https://github.com/AlexApps99/stardome"

[dependencies.jpl-sys]
version     = "0.0.1"

[dependencies.nalgebra]
version     = "0.23.1"

[dependencies.sgp4]
version     = "0.4.0"

[dependencies.sofa-sys]
version     = "2020.7.21-beta.1"
