[package]
name        = "stardome"
version     = "0.1.0"
authors     = ["AlexApps99 <alex.apps99@gmail.com>"]
edition     = "2018"

publish     = false
description = "Planet visualization"
repository  = "https://github.com/ZoussCity/stardome"

[dependencies.cfg-if]
version     = "1.0.0"

[dependencies.gl]
version     = "0.14.0"

[dependencies.image]
version     = "0.23.14"
default-features = false
features    = ["png"]

[dependencies.imgui]
version     = "0.7.0"

[dependencies.imgui-opengl-renderer]
version     = "0.11.0"

[dependencies.imgui-sdl2]
version     = "0.14.0"

[dependencies.nalgebra]
version     = "0.26.2"

[dependencies.sdl2]
version     = "0.34.5"

[dev-dependencies.rspice]
# not smart
default-features = false
path        = "../../cspice/rspice/"

#[dev-dependencies.sofa-sys]
#version     = "2020.7.21-beta.1"

[features]
# TODO make the debug feature toggle the debug OpenGL stuff
# Consider bringing back imgui as a feature
# But only once it's implemented
default     = ["debug"]
debug       = []
gles        = []
